cabal-version:      2.4
name:               acc-structure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             HugoPeters1024
maintainer:         hpeters1024@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable acc-structure
    main-is:          Main.hs
    ghc-options: -threaded -fplugin GHC.TypeLits.KnownNat.Solver
                

    -- Modules included in this executable, other than Main.
    other-modules: LinAlg
                 , Structures
                 , Models
                 , Stack


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , accelerate
                    , accelerate-io-vector
                    , gloss-raster-accelerate
                    , accelerate-llvm-ptx
                    , gloss
                    , colour-accelerate
                    , linear-accelerate
                    , transformers
                    , mtl
                    , primitive
                    , data-default
                    , ghc-prim
                    , ghc-typelits-knownnat
                    , wavefront
                    , vector
                    , vector-algorithms
    hs-source-dirs:   app
    default-language: Haskell2010
